tests/fixtures/invalid/pow_set_set_none.py
# Cannot call pow() with Set[int], Set[int], None
x = pow({1, 2, 3}, {1, 2, 3}, None)
